[package]
name = "libraries"
version = "0.1.0"
authors = ["Mohamed Hassanin <mhassani@mathworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde ={version= "1.0.118",features = ["derive"]}